# pywuffs

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: linux.yml  macos.yml  windows.yml
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/src/: conf.py  index.rst
example/: example.py
scripts/: generate_docs.sh
src/: wuffs-aux-image-wrapper.h  wuffs-aux-json-wrapper.h  wuffs-aux-utils.h  wuffs-bindings.cpp
test/: test_aux_image_decoder.py  test_aux_json_decoder.py
test/images/: lena.nie  lena.qoi  lena.tga  lena.wbmp
test/json/: invalid1.json  invalid2.json  invalid3.json  non-string-map-key.json  simple.json
